<resources>
    <string name="app_name">Databases Made Easy</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="register">Register</string>
    <string name="no_account_register">No Account? Register</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="login">Login</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_summary">SummaryActivity</string>
    <string name="question">Question</string>
    <string name="solutions">Solutions (select one of the following)</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="x_of_y">%1$d of %2$d</string>
    <string name="DBME_About">Databases Made Easy is an application created under the Nelson Mandela University Teaching Development and Innovation Fund to allow students to learn basic concepts of databases at their own pace.</string>
    <string name="DBME_FeedbackText">This app is continuously under development. If you have any feedback or suggestions, please submit them to the link below</string>

    <!-- Replace the url here with whichever link will be used to report issues -->
    <string name="submit_issue"><a href="https://github.com/LadySith/DBMadeEasy/issues">Submit Issue</a></string>
</resources>
